RESOLVED FIXED148891
AX: Mavericks: Text cursor does not move along with VoiceOver cursor for text fields
https://bugs.webkit.org/show_bug.cgi?id=148891
Summary AX: Mavericks: Text cursor does not move along with VoiceOver cursor for text...
chris fleizach
Reported 2015-09-04 23:41:51 PDT
0. Machine running 13F34 + ToT 1. Go to facebook.com 2. Turn on VoiceOver. 3. Go to any field besides the first one with VoiceOver cursor. 4. Type into the field. * RESULTS Text is inserted into the first field and not the one that has VoiceOver focus. * REGRESSION r179820 <rdar://problem/22566548>
Attachments
patch (4.88 KB, patch)
2015-09-05 00:31 PDT, chris fleizach
buildbot: commit-queue-
Archive of layout-test-results from ews103 for mac-mavericks (673.31 KB, application/zip)
2015-09-05 01:10 PDT, Build Bot
no flags
Archive of layout-test-results from ews106 for mac-mavericks-wk2 (626.13 KB, application/zip)
2015-09-05 01:11 PDT, Build Bot
no flags
patch (5.62 KB, patch)
2015-09-05 09:13 PDT, chris fleizach
no flags
patch (5.64 KB, patch)
2015-09-05 09:15 PDT, chris fleizach
buildbot: commit-queue-
Archive of layout-test-results from ews103 for mac-mavericks (601.54 KB, application/zip)
2015-09-05 09:47 PDT, Build Bot
no flags
Archive of layout-test-results from ews106 for mac-mavericks-wk2 (662.17 KB, application/zip)
2015-09-05 09:53 PDT, Build Bot
no flags
patch (5.65 KB, patch)
2015-09-05 23:06 PDT, chris fleizach
no flags
patch (3.32 KB, patch)
2015-09-09 15:06 PDT, chris fleizach
no flags
patch (3.18 KB, patch)
2015-09-10 09:54 PDT, chris fleizach
ap: review+
chris fleizach
Comment 1 2015-09-05 00:31:52 PDT
Build Bot
Comment 2 2015-09-05 01:10:52 PDT
Comment on attachment 260679 [details] patch Attachment 260679 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/142211 New failing tests: accessibility/mac/setting-attributes-is-asynchronous.html
Build Bot
Comment 3 2015-09-05 01:10:55 PDT
Created attachment 260680 [details] Archive of layout-test-results from ews103 for mac-mavericks The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews103 Port: mac-mavericks Platform: Mac OS X 10.9.5
Build Bot
Comment 4 2015-09-05 01:11:28 PDT
Comment on attachment 260679 [details] patch Attachment 260679 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/142213 New failing tests: accessibility/mac/setting-attributes-is-asynchronous.html accessibility/mac/focus-setting-selection-syncronizing-not-clearing.html
Build Bot
Comment 5 2015-09-05 01:11:33 PDT
Created attachment 260681 [details] Archive of layout-test-results from ews106 for mac-mavericks-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews106 Port: mac-mavericks-wk2 Platform: Mac OS X 10.9.5
chris fleizach
Comment 6 2015-09-05 09:13:28 PDT
WebKit Commit Bot
Comment 7 2015-09-05 09:14:27 PDT
Attachment 260685 [details] did not pass style-queue: ERROR: LayoutTests/platform/mac/TestExpectations:1184: Path does not exist. [test/expectations] [5] Total errors found: 1 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
chris fleizach
Comment 8 2015-09-05 09:15:38 PDT
Build Bot
Comment 9 2015-09-05 09:47:18 PDT
Comment on attachment 260687 [details] patch Attachment 260687 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/143161 New failing tests: accessibility/mac/setting-attributes-is-asynchronous.html
Build Bot
Comment 10 2015-09-05 09:47:22 PDT
Created attachment 260689 [details] Archive of layout-test-results from ews103 for mac-mavericks The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews103 Port: mac-mavericks Platform: Mac OS X 10.9.5
Build Bot
Comment 11 2015-09-05 09:53:32 PDT
Comment on attachment 260687 [details] patch Attachment 260687 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/143172 New failing tests: accessibility/mac/setting-attributes-is-asynchronous.html accessibility/mac/focus-setting-selection-syncronizing-not-clearing.html
Build Bot
Comment 12 2015-09-05 09:53:36 PDT
Created attachment 260690 [details] Archive of layout-test-results from ews106 for mac-mavericks-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews106 Port: mac-mavericks-wk2 Platform: Mac OS X 10.9.5
chris fleizach
Comment 13 2015-09-05 23:06:21 PDT
Mario Sanchez Prada
Comment 14 2015-09-07 09:47:38 PDT
Comment on attachment 260707 [details] patch It seems to be clean on EWS now
WebKit Commit Bot
Comment 15 2015-09-07 23:24:30 PDT
Comment on attachment 260707 [details] patch Clearing flags on attachment: 260707 Committed r189483: <http://trac.webkit.org/changeset/189483>
WebKit Commit Bot
Comment 16 2015-09-07 23:24:37 PDT
All reviewed patches have been landed. Closing bug.
chris fleizach
Comment 17 2015-09-09 15:06:15 PDT
Created attachment 260877 [details] patch this change can also work on Yosemite (just not mavericks)
chris fleizach
Comment 18 2015-09-10 09:54:30 PDT
chris fleizach
Comment 19 2015-09-10 17:57:38 PDT
Note You need to log in before you can comment on or make changes to this bug.