AX: Mavericks: Text cursor does not move along with VoiceOver cursor for text fields https://bugs.webkit.org/show_bug.cgi?id=148891

Reviewed by Mario Sanchez Prada.

Source/WebCore:

Undo the asynchronous dispatch of accessibility setting values on pre El Capitan machines
because it causes focus to not sync correctly.

Test: accessibility/mac/focus-moves-cursor.html

* accessibility/mac/WebAccessibilityObjectWrapperMac.mm:
(-[WebAccessibilityObjectWrapper accessibilitySetValue:forAttribute:]):
(-[WebAccessibilityObjectWrapper _accessibilitySetValue:forAttribute:]):

LayoutTests:

* accessibility/mac/focus-moves-cursor-expected.txt: Added.
* accessibility/mac/focus-moves-cursor.html: Added.


Canonical link: https://commits.webkit.org/167037@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@189483 268f45cc-cd09-0410-ab3c-d52691b4dbfc